--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "version": "3.1.1"
   },
   "dependencies": {
+    "dtrace-provider": "^0.8.6",
     "hexo": "^3.1.0",
-    "hexo-deployer-git": "0.0.4",
+    "hexo-deployer-git": "0.3.1",
     "hexo-generator-archive": "^0.1.2",
     "hexo-generator-category": "^0.1.2",
-    "hexo-generator-index": "^0.1.2",
-    "hexo-generator-tag": "^0.1.1",
-    "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-marked": "^0.2.4",
+    "hexo-generator-index": "^0.2.1",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.0",
-    "hexo-server": "^0.1.2"
+    "hexo-server": "^0.3.1"
   }
 }
