--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.1.1"
+    "version": "3.7.1"
   },
   "dependencies": {
-    "dtrace-provider": "^0.8.6",
-    "hexo": "^3.1.0",
+    "bcrypt": "^3.0.0",
+    "dtrace-provider": "^0.8.7",
+    "hexo": "^3.7.1",
     "hexo-deployer-git": "0.3.1",
-    "hexo-generator-archive": "^0.1.2",
-    "hexo-generator-category": "^0.1.2",
+    "hexo-generator-archive": "^0.1.5",
+    "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
-    "hexo-renderer-stylus": "^0.3.0",
-    "hexo-server": "^0.3.1"
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.3.3"
   }
 }
